bug fixes the channeling problem